Refactor code for improved readability, remove unused variables, enhance documentation and fix typos across multiple files.